# Theory_automata

./: .gitignore
lab1/: CMakeLists.txt  dnf.cpp  dnf.h  f_table.txt  g_table.txt  impl.cpp  impl.h  implicant.cpp  implicant.h  machine.cpp  machine.h  main.cpp  mdnf.txt  scale.txt  streamData.cpp  streamData.h  utils.cpp  utils.h
